# stsci.imagemanip

./: .gitignore  RECON-INFO  setup.cfg  setup.py
src/: bilinearinterp.c
stsci/imagemanip/: __init__.py  interp2d.py
stsci/imagemanip/tests/: testImageManip.py
trunk/stsci/imagemanip/: __init__.py
