[metadata]
name = stsci.imagemanip
version = 1.1.dev
author = Christopher Hanley
author-email = help@stsci.edu
summary = STScI general image manipulation tools
home-page = http://www.stsci.edu/resources/software_hardware/stsci_python 
classifier =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Software Development :: Libraries :: Python Modules
requires-python = >=2.5
requires-dist =
    stsci.tools (>=3.1.dev)
    numpy (>=1.5.1)

[files]
packages =
    stsci
    stsci.imagemanip
    stsci.imagemanip.tests

[extension=stsci.imagemanip.bilinearinterp]
sources = src/bilinearinterp.c
include_dirs = numpy

[global]
setup-hooks =
    stsci.distutils.hooks.tag_svn_revision
    stsci.distutils.hooks.version_setup_hook

[build_ext]
pre-hook.numpy-extension-hook = stsci.distutils.hooks.numpy_extension_hook

[easy_install]
find-links = http://stsdas.stsci.edu/download/packages
